# i2cbridge

glooxtest/: .gitignore  CMakeLists.txt  configuredclientfactory.cpp  configuredclientfactory.h  glooxtest.kdev4  i2ccontrol.config.example  main.cpp  spacecontrolclient.cpp  spacecontrolclient.h
